2008-10-23  Gabor Csardi  <csardi@szaffi>

	* src/attributes.h (igraph_i_attribute_table) :
	* src/attributes.c (igraph_i_attribute_permute_edges) : 
	added 'newgraph' argument, change semantics
	* src/cattributes.c (igraph_i_cattribute_permute_edges) : updated
	* src/type_indexededgelist.c (igraph_delete_vertices)
	(igraph_delete_edges)
	* src/conversion.c (igraph_to_directed) : updated

	* src/attributes.h (igraph_i_attribute_table) :
	* src/attributes.c (igraph_i_attribute_permute_vertices) : 
	add 'newgraph' argument, change semantics
	* src/cattributes.c (igraph_i_cattribute_permute_vertices) : updated
	* src/type_indexededgelist.c (igraph_delete_vertices) : updated

	* src/error.h : added new error code

2008-10-18  Gabor Csardi  <csardi@szaffi>

	* src/attributes.h (igraph_i_attribute_table) : 
	use permute_vertices instead of delete_vertices, 
	permute_edges instead of delete_edges
	* src/attributes.c (igraph_i_attribute_delete_vertices)
	(igraph_i_attribute_permute_vertices) 
	(igraph_i_attribute_delete_edges) : delete_ versions removed,
	use permute_ instead
	* src/cattributes.c (igraph_i_cattribute_delete_vertices)
	(igraph_i_cattribute_delete_edges) : removed
	(igraph_i_cattribute_permute_vertices)
	(igraph_i_cattribute_permute_edges) : added
	* src/type_indexededgelist.c (igraph_delete_vertices)
	(igraph_delete_edges) : update for the new attribute handler

	* src/vector.pmt (igraph_vector_index) : added

2008-10-17  Gabor Csardi  <csardi@szaffi>

	* src/igraph_strvector.c (igraph_strvector_index) : added	

2008-10-01  Gabor Csardi  <csardi@szaffi>

	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak

2008-09-29  Gabor Csardi  <csardi@szaffi>

	* src/spectral_properties.c (igraph_laplacian) : added 'weights' 
	argument

	* src/type_indexededgelist.c (igraph_get_eids) : rewritten to
	use binary search. In practice it is faster only if we search 
	for adjacent edges of high-degree vertices frequently
	* examples/simple/igraph_get_eids.c : added
